--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,8 @@ jobs:
       - run: git submodule update --init
       - run: make cmake-linux CMAKE_OPTIONS="-DTANGRAM_USE_SYSTEM_FONT_LIBS=1 -DTANGRAM_USE_SYSTEM_GLFW_LIBS=1 -DUNIT_TESTS=1 -DBENCHMARK=1 -GNinja"
       - run: ninja -C build/linux -j 4
-      - run: source scripts/run_tests.sh build/linux/bin
-      - run: source scripts/run_bench.sh build/linux/bin
+      - run: source scripts/run_tests.sh build/linux
+      - run: source scripts/run_bench.sh build/linux
   build-android:
     docker:
       - image: circleci/android:api-28-ndk-r17b
