wip: Make TileManager and TileWorker members of Scene
Reduce use of unnecessary shared_ptr as parameter

wip: move MarkerManager to Scene

Move Map::update() to Scene::update()

Move Map::render() things to Scene::render()

Add Scene::background(zoom)

Init TileBuilder on TileWorker threads

Start tile loading asap

Move 'Labels' to Scene

Rename 'Labels' to LabelManager

squash: More unnecessary share_ptr

More SceneLoader reordering

- need some async texture loading on android..

wip: Pass PixelScale to loading Scene

Fix tests

Fix excessive use of shared_ptr<Platform>

- Platform is the last one to go: Anything calling into anything afterwards
  are zombies. Or put differently:
  Don't try to hide your bugs under the carpet!

drop: testing

Add SceneOptions to hold url, yaml, updates, etc for initialization

- Maybe make this the API to not have hundred loadSceneAsyncWithCream functions
- Also keep Platform in Scene to unclutter SceneLoader

Fix tests

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -34,7 +34,7 @@ add_library(tangram-core
   src/labels/labelCollider.cpp
   src/labels/labelProperty.cpp
   src/labels/labelSet.cpp
-  src/labels/labels.cpp
+  src/labels/labelManager.cpp
   src/labels/spriteLabel.cpp
   src/labels/textLabel.cpp
   src/marker/marker.cpp
