--- a/platforms/android/tangram/build.gradle
+++ b/platforms/android/tangram/build.gradle
@@ -5,6 +5,7 @@ group = GROUP
 version = VERSION_NAME
 
 apply from: 'versioning.gradle'
+apply from: 'profiling.gradle'
 
 android {
   compileSdkVersion 27
@@ -28,7 +29,8 @@ android {
         targets 'tangram'
         arguments '-DTANGRAM_PLATFORM=android',
                   '-DANDROID_TOOLCHAIN=clang',
-                  '-DANDROID_STL=c++_shared'
+                  '-DANDROID_STL=c++_shared',
+                '-DCMAKE_BUILD_TYPE=Release'
         cppFlags '-std=c++14',
                  '-pedantic',
                  '-fPIC',
