--- a/core/deps/CMakeLists.txt
+++ b/core/deps/CMakeLists.txt
@@ -7,6 +7,7 @@ endif()
 
 ## yaml-cpp ##
 ##############
+set(YAML_CPP_BUILD_TESTS OFF CACHE BOOL "")
 set(YAML_CPP_BUILD_TOOLS OFF CACHE BOOL "")
 set(YAML_CPP_BUILD_CONTRIB OFF CACHE BOOL "")
 set(YAML_CPP_INSTALL OFF CACHE BOOL "")
