Add benchmark template
- Copy and replace 'Template' to quickly write your benchmarks

--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -9,6 +9,7 @@ set(BENCH_SOURCES
   src/benchStyleContext.cpp
   src/benchTileBuilder.cpp
   src/benchTileSource.cpp
+  src/template.cpp
 )
 
 # create an executable per bench
