Build with JSCore on linux

--- a/core/deps/CMakeLists.txt
+++ b/core/deps/CMakeLists.txt
@@ -25,7 +25,10 @@ target_include_directories(css-color-parser-cpp PUBLIC css-color-parser-cpp)
 
 ## duktape ##
 #############
+if(TANGRAM_USE_DUKTAPE)
 add_subdirectory(duktape)
+endif()
+
 
 ## miniz ##
 ###########
