--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,11 @@ jobs:
     steps:
       - checkout
       - run: git submodule update --init
-      - run: make cmake-linux CMAKE_OPTIONS="-DTANGRAM_USE_SYSTEM_FONT_LIBS=1 -DTANGRAM_USE_SYSTEM_GLFW_LIBS=1 -DUNIT_TESTS=1 -DBENCHMARK=1 -GNinja"
+      - run: apt-get update && apt-get install -y wget
+      - run: wget https://github.com/Kitware/CMake/releases/download/v3.13.0/cmake-3.13.0-Linux-x86_64.tar.gz
+      - run: tar xzf cmake-3.13.0-Linux-x86_64.tar.gz
+      - run: mv cmake-3.13.0-Linux-x86_64 tools
+      - run: PATH=`pwd`/tools/bin:$PATH make cmake-linux CMAKE_OPTIONS="-DTANGRAM_USE_SYSTEM_FONT_LIBS=1 -DTANGRAM_USE_SYSTEM_GLFW_LIBS=1 -DTANGRAM_BUILD_TESTS=1 -DTANGRAM_BUILD_BENCHMARKS=1 -GNinja"
       - run: ninja -C build/linux -j 4
       - run: source scripts/run_tests.sh build/linux
       - run: source scripts/run_bench.sh build/linux
