--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,3 @@
-
 add_library(platform_test
   ${CMAKE_CURRENT_SOURCE_DIR}/src/catch.cpp
 )
@@ -15,6 +14,7 @@ target_include_directories(platform_test
 )
 
 set(TEST_SOURCES
+  src/catch.cpp
   unit/curlTests.cpp
   unit/drawRuleTests.cpp
   unit/dukTests.cpp
@@ -44,20 +44,17 @@ set(TEST_SOURCES
   unit/yamlUtilTests.cpp
 )
 
-# create an executable per test
-foreach(_src_file_path ${TEST_SOURCES})
-  string(REPLACE ".cpp" "" test_case ${_src_file_path})
-  string(REGEX MATCH "([^/]*)$" test_name ${test_case})
+if(TANGRAM_BUNDLE_TESTS)
 
-  set(EXECUTABLE_NAME "${test_name}.out")
-  add_executable(${EXECUTABLE_NAME} ${_src_file_path})
+  set(EXECUTABLE_NAME tests.out)
+
+  add_executable(${EXECUTABLE_NAME} ${TEST_SOURCES})
 
   target_link_libraries(${EXECUTABLE_NAME}
     tangram-core
     platform_test
   )
 
-  # Use all include directories from tangram-core because tests interact with internal classes.
   target_include_directories(${EXECUTABLE_NAME} PRIVATE
     $<TARGET_PROPERTY:tangram-core,INCLUDE_DIRECTORIES>
   )
@@ -67,7 +64,35 @@ foreach(_src_file_path ${TEST_SOURCES})
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/tests"
   )
 
-endforeach()
+  # Copy resources into output directory (only needs to be performed for one target)
+  add_resources(${EXECUTABLE_NAME} "${PROJECT_SOURCE_DIR}/scenes" "res")
 
-# Copy resources into output directory (only needs to be performed for one target)
-add_resources(${EXECUTABLE_NAME} "${PROJECT_SOURCE_DIR}/scenes" "res")
+else()
+  # create an executable per test
+  foreach(_src_file_path ${TEST_SOURCES})
+    string(REPLACE ".cpp" "" test_case ${_src_file_path})
+    string(REGEX MATCH "([^/]*)$" test_name ${test_case})
+
+    set(EXECUTABLE_NAME "${test_name}.out")
+    add_executable(${EXECUTABLE_NAME} ${_src_file_path})
+
+    target_link_libraries(${EXECUTABLE_NAME}
+      tangram-core
+      platform_test
+    )
+
+    # Use all include directories from tangram-core because tests interact with internal classes.
+    target_include_directories(${EXECUTABLE_NAME} PRIVATE
+      $<TARGET_PROPERTY:tangram-core,INCLUDE_DIRECTORIES>
+    )
+
+    set_target_properties(${EXECUTABLE_NAME}
+      PROPERTIES
+      RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/tests"
+    )
+    # Copy resources into output directory (only needs to be performed for one target)
+    add_resources(${EXECUTABLE_NAME} "${PROJECT_SOURCE_DIR}/scenes" "res")
+
+  endforeach()
+
+endif()
