Enable JSCore by default on osx/ios

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -126,6 +126,9 @@ target_include_directories(tangram-core
 
 # Choose JavaScript implementation.
 if(TANGRAM_USE_JAVASCRIPTCORE)
+  target_compile_definitions(tangram-core
+    PRIVATE TANGRAM_USE_JAVASCRIPTCORE=1)
+
   if (TANGRAM_USE_JAVASCRIPTCORE_STATIC)
     find_package(ICU COMPONENTS io i18n REQUIRED)
     link_directories(${ICU_LIBRARY_DIRS})
@@ -144,6 +147,9 @@ if(TANGRAM_USE_JAVASCRIPTCORE)
 endif()
 
 if(TANGRAM_USE_DUKTAPE)
+  target_compile_definitions(tangram-core
+    PRIVATE TANGRAM_USE_DUKTAPE=1)
+
   target_link_libraries(tangram-core PRIVATE duktape)
 endif()
 
@@ -167,7 +173,8 @@ if(UNIX AND NOT APPLE)
 endif()
 
 if(TANGRAM_WARN_ON_RULE_CONFLICT)
-  add_definitions(-DTANGRAM_WARN_ON_RULE_CONFLICT)
+  target_compile_definitions(tangram-core
+    PRIVATE TANGRAM_WARN_ON_RULE_CONFLICT 1)
 endif()
 
 if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
