--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -5,8 +5,9 @@ add_subdirectory(benchmark)
 target_compile_options(benchmark PRIVATE -O3 -DNDEBUG)
 
 set(BENCH_SOURCES
-  src/builders.cpp
-  src/tileLoading.cpp
+  #src/builders.cpp
+  #src/tileLoading.cpp
+  src/sceneLoading.cpp
 )
 
 # create an executable per bench
