--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -6,7 +6,6 @@ add_subdirectory(deps)
 if (TANGRAM_MBTILES_DATASOURCE)
   set(MBTILES_SOURCES src/data/mbtilesDataSource.cpp)
   set(MBTILES_LIBS SQLiteCpp sqlite3)
-  add_definitions(-DTANGRAM_MBTILES_DATASOURCE)
 endif()
 
 add_library(tangram-core
@@ -149,7 +148,15 @@ if(UNIX AND NOT APPLE)
 endif()
 
 if(TANGRAM_WARN_ON_RULE_CONFLICT)
-  add_definitions(-DTANGRAM_WARN_ON_RULE_CONFLICT)
+  target_compile_definitions(tangram-core
+    PRIVATE
+    TANGRAM_WARN_ON_RULE_CONFLICT)
+endif()
+
+if (TANGRAM_MBTILES_DATASOURCE)
+  target_compile_definitions(tangram-core
+    PRIVATE
+    TANGRAM_MBTILES_DATASOURCE)
 endif()
 
 if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
