--- a/platforms/android/demo/build.gradle
+++ b/platforms/android/demo/build.gradle
@@ -30,6 +30,7 @@ android {
 }
 
 dependencies {
+  compile 'com.squareup.okio:okio:2.1.0'
   implementation project(path: ':tangram')
   implementation 'com.android.support:design:27.1.1'
 }
