--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,10 +66,12 @@ set(TANGRAM_PLATFORM ${TANGRAM_PLATFORM} CACHE INTERNAL "Tangram platform target
 include(${TANGRAM_PLATFORM_CONFIG_FILE})
 
 # Choose JavaScript implementation.
-set(TANGRAM_JSCORE_AVAILABLE ((TANGRAM_IOS OR TANGRAM_OSX) OR TANGRAM_USE_JSCORE_STATIC))
-set(TANGRAM_JSCORE_ENABLED ((TANGRAM_USE_JSCORE OR TANGRAM_BUILD_BENCHMARKS) AND TANGRAM_JSCORE_AVAILABLE))
-if(TANGRAM_JSCORE_ENABLED)
-  add_definitions(-DTANGRAM_USE_JSCORE=1)
+if (TANGRAM_IOS OR TANGRAM_OSX OR TANGRAM_USE_JSCORE_STATIC)
+  set(TANGRAM_JSCORE_AVAILABLE ON)
+endif()
+
+if (TANGRAM_JSCORE_AVAILABLE AND (TANGRAM_USE_JSCORE OR TANGRAM_BUILD_BENCHMARKS))
+  set(TANGRAM_JSCORE_ENABLED ON)
 endif()
 
 # Add core library.
