--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,8 +69,7 @@ include(${TANGRAM_PLATFORM_CONFIG_FILE})
 if (TANGRAM_IOS OR TANGRAM_OSX OR TANGRAM_USE_JSCORE_STATIC)
   set(TANGRAM_JSCORE_AVAILABLE ON)
 endif()
-
-if (TANGRAM_JSCORE_AVAILABLE AND (TANGRAM_USE_JSCORE OR TANGRAM_BUILD_BENCHMARKS))
+if (TANGRAM_JSCORE_AVAILABLE AND TANGRAM_USE_JSCORE)
   set(TANGRAM_JSCORE_ENABLED ON)
 endif()
 
