Enable linking from installed JavaScriptCore on linux

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -140,7 +140,8 @@ target_link_libraries(tangram-core
 if(TANGRAM_JSCORE_ENABLED)
   target_sources(tangram-core PRIVATE src/js/JSCoreContext.cpp)
   if (TANGRAM_USE_JSCORE_STATIC)
-    target_link_libraries(tangram-core PRIVATE jscore-static)
+    pkg_check_modules(JSCORE REQUIRED IMPORTED_TARGET javascriptcoregtk-4.0)
+    target_link_libraries(tangram-core PRIVATE PkgConfig::JSCORE)
   else()
     target_link_libraries(tangram-core PRIVATE "-framework JavaScriptCore")
   endif()
