--- a/scenes/scene-with-disabled-stamen-raster.yaml
+++ b/scenes/scene-with-disabled-stamen-raster.yaml
@@ -1,18 +1,13 @@
 import: scene.yaml
 
 sources:
-    stamen-terrain:
-        type: Raster
-        #url: http://a.tile.stamen.com/terrain-background/{z}/{x}/{y}.jpg
-        url: http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png
-        url_subdomains: [a, b, c]
+    invalid-test-source:
+        type: MVT
+        url: https://invalid.tile.source.url/{z}/{x}/{y}.mvt
 
 layers:
-    terrain:
-        #enabled: false
-        data: { source: stamen-terrain }
-        draw:
-            raster:
-                #color: [0.8, 0.8, 0.8]
-                order: 0 # draw on bottom
+    invalid-test-layer:
+        enabled: false
+        data: { source: invalid-test-source }
+        draw: { polygons: { color: white, order: 1 } }
 
