Update Android build tools and configuration
- Upgrade Android Gradle plugin from 3.0.1 to 3.2.1
- Upgrade Gradle from 4.4 to 4.6
- Replace deprecated 'compile' declaration with 'implementation'
- Remove 'clang' toolchain CMake argument, it's now the default

--- a/platforms/android/demo/build.gradle
+++ b/platforms/android/demo/build.gradle
@@ -30,7 +30,7 @@ android {
 }
 
 dependencies {
-  compile 'com.squareup.okio:okio:2.1.0'
+  implementation 'com.squareup.okio:okio:2.1.0'
   implementation project(path: ':tangram')
   implementation 'com.android.support:design:27.1.1'
 }
