--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -277,10 +277,7 @@ if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 endif()
 
 # C++14 is required for compiling tangram-core and for using the interface headers.
-# Making this option PUBLIC declares it as a requirement for targets linking against tangram-core.
-target_compile_options(tangram-core
-  PUBLIC -std=c++14
-)
+set_property(TARGET tangram-core PROPERTY CXX_STANDARD 14)
 
 # We include GLSL shader sources into the library by generating header files with the source text
 # printed into a string constant. A CMake script generates one of these headers for each shader source
