Build iOS Swift demo on CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,9 +42,10 @@ jobs:
       - run: git submodule update --init
       # Install dependencies.
       - run: brew install cmake
-      # Build framework and docs.
+      # Build test app variants. Use simulator target to bypass codesigning.
       - run: make ios-sim BUILD_TYPE=Debug
       - run: make ios-static-sim BUILD_TYPE=Debug
+      - run: make ios-swift-sim BUILD_TYPE=Debug
   build-deploy-ios-snapshot:
     macos:
       xcode: "10.3.0"
