Revert "macOS CI build use font packages from brew"
This reverts commit de427681aeaad1c67b4e898273ef94d3406601e6.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,9 +91,9 @@ jobs:
       - checkout
       - run: git submodule update --init
       # Install dependencies.
-      - run: brew install cmake ninja harfbuzz
+      - run: brew install cmake ninja
       # Build the MacOS demo app and package it into demo.zip
-      - run: make osx MACOSX_DEPLOYMENT_TARGET=10.10.0 BUILD_TYPE=Debug CMAKE_OPTIONS="-DTANGRAM_USE_SYSTEM_FONT_LIBS=1 -GNinja"
+      - run: make osx MACOSX_DEPLOYMENT_TARGET=10.10.0 BUILD_TYPE=Debug CMAKE_OPTIONS="-GNinja"
       # To produce the intended structure within the zip archive, we must cd to each file's location.
       - run: cd build/osx && zip -r ~/demo.zip tangram.app
       - store_artifacts:
